--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: title
-author: author 
-description: description
+title: Mojo Jojo's Emoji Dojo
+author: Mojo Jojo 
+description: Making sense of the world one einstein tile at a time
