--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-theme: minima
 title: Mojo Jojo's Emoji Dojo
 author: Mojo Jojo 
-description: Making sense of the world one einstein tile at a time
+description: Making sense of the world one einstein tile at a timeremote_theme: pages-themes/hacker@v0.2.0
+plugins: 
+- jekyll-remote-theme
