--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Mojo Jojo's Emoji Dojo
+title: Mojo Jojos Emoji Dojo
 author: Mojo Jojo 
-description: Making sense of the world one einstein tile at a timeremote_theme: pages-themes/hacker@v0.2.0
+description: Making sense of the world one einstein tile at a time
 remote_theme: pages-themes/hacker@v0.2.0
 plugins: 
 - jekyll-remote-theme
